--- a/ui/controls/field-treeview.reel/field-treeview.html
+++ b/ui/controls/field-treeview.reel/field-treeview.html
@@ -44,7 +44,7 @@
             "bindings": {
                 "disabled": {"<-": "@owner.disabled || @owner.readOnly"},
                 "value": {"<-": "!@owner.selectedPath ? 'none' : (@owner.selectedPath + (!!@owner.suffix ? '/' + @owner.suffix : '')).replace(@owner.removePrefix || '', '')"},
-                "disabled": {"<-": "@owner.isExpanded"},
+                "disabled": {"<-": "@owner.isExpanded || !!@owner.isNotTypable"},
                 "delegate": {"<-": "@owner.pathInputDelegate"}
             }
         },
