--- a/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
+++ b/ui/sections/storage/inspectors/volume-importer.reel/volume-importer.html
@@ -46,6 +46,67 @@
             "bindings": {
                 "object": {"<-": "@owner.encryptedVolumeImporter"}
             }
+        },
+        "importableDisks": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "importableDisks"},
+                "label": "Import media"
+            },
+            "bindings": {
+                "selectedValue": {"<->": "@owner.importDisk"},
+                "options": {"<-": "@owner.importableDiskOptions"}
+            }
+        },
+        "filesystemTreeController": {
+            "prototype": "core/controller/filesystem-tree-controller",
+            "properties": {
+                "canListFiles": false,
+                "root": "/mnt"
+            },
+            "bindings": {
+                "service": {"<-": "@owner.application.filesystemService"}
+            }
+        },
+        "mapMediaPath": {
+            "prototype": "ui/controls/field-treeview.reel",
+            "properties": {
+                "element": {"#": "mapMediaPath"},
+                "controller": {"@": "filesystemTreeController"},
+                "validationPath": "mapMediaPath",
+                "label": "Directory"
+            },
+            "bindings": {
+                "selectedPath": {"<->": "@owner.importPath"}
+            }
+        },
+        "refreshMedia": {
+            "prototype": "blue-shark/ui/button.reel",
+            "properties": {
+                "element": {"#": "refreshMedia"},
+                "value": "Scan media"
+            }
+        },
+        "mediaFsType": {
+            "prototype": "blue-shark/ui/field-text-input.reel",
+            "properties": {
+                "element": {"#": "mediaFsType"},
+                "label": "Media filesystem type",
+                "placeholderValue": "e.g. msdosfs, leave empty to autodetect"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.importFsType"}
+            }
+        },
+        "importMedia": {
+            "prototype": "blue-shark/ui/button.reel",
+            "properties": {
+                "element": {"#": "importMedia"},
+                "value": "Import media"
+            },
+            "bindings": {
+                "disabled": {"<-": "!@owner.importDisk || !@owner.importPath"}
+            }
         }
     }
     </script>
@@ -55,6 +116,11 @@
         <div data-montage-id="detachedVolumes"></div>
         <div data-montage-id="refresh" class="g-margin"></div>
         <div data-montage-id="encrypted"></div>
+        <div data-montage-id="importableDisks"></div>
+        <div data-montage-id="mapMediaPath"></div>
+        <div data-montage-id="mediaFsType"></div>
+        <div data-montage-id="refreshMedia"></div>
+        <div data-montage-id="importMedia"></div>
     </div>
 </body>
 </html>
