ADDED: ENCRYPTED_VOLUME_ACTIONS_TYPE

--- a/ui/sections/storage/inspectors/volume.reel/volume.html
+++ b/ui/sections/storage/inspectors/volume.reel/volume.html
@@ -63,7 +63,8 @@
                 "element": {"#": "encryptionActions"}
             },
             "bindings": {
-                "object": {"<-": "@owner.encryptedVolumeActions"}
+                "object": {"<-": "@owner.encryptedVolumeActions"},
+                "objectType": {"<-": "@owner.encryptedVolumeActionsType"}
             }
         },
         "shares": {
