gives min-width to inspectors to help auto-scroll

--- a/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
+++ b/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
@@ -73,7 +73,7 @@
     <div data-montage-id="owner" class="AlertFilter">
         <div data-montage-id="inspector">
             <div data-montage-id="id"></div>
-            <div data-montage-id="table"></div>
+            <div data-montage-id="table" class="g-margin-bottom"></div>
             <div data-montage-id="addresses"></div>
         </div>
     </div>
