initial commit for the wizard.

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -87,6 +87,12 @@
                 "element": {"#": "preferences"}
             }
         },
+        "wizard": {
+            "prototype": "ui/sections/wizard/inspectors/wizard.reel",
+            "properties": {
+                "element": {"#": "wizard"}
+            }
+        },
         "modal": {
             "prototype": "../controls/modal.reel",
             "properties": {
@@ -152,6 +158,7 @@
                         <div data-arg="virtualization" data-montage-id="virtualization"></div>
                         <div data-arg="preferences" data-montage-id="preferences"></div>
                         <div data-arg="containers" data-montage-id="containers"></div>
+                        <div data-arg="wizard" data-montage-id="wizard"></div>
                     </div>
                     <div data-arg="new" class="Main-cascadingListWrapper">
                         <div data-montage-id="cascadingList"></div>
