--- a/ui/sections/system/inspectors/language-and-region.reel/language-and-region.html
+++ b/ui/sections/system/inspectors/language-and-region.reel/language-and-region.html
@@ -178,7 +178,7 @@
             <div data-montage-id="keymaps"></div>
             <div data-montage-id="timezones"></div>
             <div data-montage-id="timezonepicker" class="g-margin-bottom"></div>
-            <div data-montage-id="advancedSection">
+            <div data-montage-id="advancedSection" class="AdvancedSection">
                 <div data-montage-id="dateFormatTitle"></div>
                 <div data-montage-id="dateFormatShort"></div>
                 <div data-montage-id="dateFormatMedium"></div>
