Add share wizard. (WIP)

--- a/ui/sections/storage/inspectors/share.reel/share.html
+++ b/ui/sections/storage/inspectors/share.reel/share.html
@@ -176,14 +176,14 @@
 <body>
     <div data-montage-id="owner" class="Share">
         <div data-montage-id="inspector">
-            <div data-montage-id="overview"></div>
-            <div data-montage-id="targetTypeSelect"></div>
+            <div data-montage-id="overview" class="wizard-is-hidden"></div>
+            <div data-montage-id="targetTypeSelect" class="wizard-is-hidden"></div>
             <div data-montage-id="targetType"></div>
-            <div data-montage-id="enabled"></div>
-            <div data-montage-id="serviceEnabled"></div>
+            <div data-montage-id="enabled" class="wizard-is-hidden"></div>
+            <div data-montage-id="serviceEnabled" class="wizard-is-hidden"></div>
             <div data-montage-id="name"></div>
-            <div data-montage-id="target"></div>
-            <div data-montage-id="description"></div>
+            <div data-montage-id="target" class="wizard-is-hidden"></div>
+            <div data-montage-id="description" class="wizard-is-hidden"></div>
             <div data-montage-id="shareTypePlaceHolder"></div>
         </div>
     </div>
