--- a/ui/sections/wizard/inspectors/system.reel/system.html
+++ b/ui/sections/wizard/inspectors/system.reel/system.html
@@ -23,7 +23,7 @@
     </script>
 </head>
 <body>
-    <div data-montage-id="owner" class="System-languageAndRegion">
+    <div data-montage-id="owner" class="System-wizard">
         <div data-montage-id="languageAndRegion"></div>
     </div>
 </body>
