--- a/ui/inspectors/calendar-task.reel/smart-args.reel/smart-args.html
+++ b/ui/inspectors/calendar-task.reel/smart-args.reel/smart-args.html
@@ -36,7 +36,7 @@
                 "label": "Test type"
             },
             "bindings": {
-                "options": {"<-": "@owner.testTypes"},
+                "options": {"<-": "[{label: '-'}].concat(@owner.testTypes)"},
                 "selectedValue": {"<->": "@owner.args.1"}
             }
         }
