Fix mild spelling mistake.

--- a/ui/sections/system/inspectors/preferences.reel/preferences.html
+++ b/ui/sections/system/inspectors/preferences.reel/preferences.html
@@ -162,7 +162,7 @@
             "prototype": "blue-shark/ui/button.reel",
             "properties": {
                 "element": {"#": "factoryRestore"},
-                "value": "Restor Factory Settings"
+                "value": "Restore Factory Settings"
             }
         }
     }
