UPDATED: rename wrong label desc

--- a/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
+++ b/ui/sections/system/inspectors/alert.reel/table-predicates.reel/table-predicates.html
@@ -15,7 +15,7 @@
             "properties": {
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
-                "label": "Ports",
+                "label": "Predicates",
                 "columns":  [
                     {
                         "value": "property"
