Rename keytabs entries columns
Ticket: #18961

--- a/ui/sections/accounts/inspectors/kerberos-keytab.reel/kerberos-keytab.html
+++ b/ui/sections/accounts/inspectors/kerberos-keytab.reel/kerberos-keytab.html
@@ -66,11 +66,11 @@
                 "contentMaxHeight": 22,
                 "columns":  [
                     {
-                        "value": "version",
+                        "value": "principal",
                         "path": "vno"
                     },
                     {
-                        "value": "description",
+                        "value": "enctype",
                         "path": "enctype"
                     }
                 ]
