--- a/ui/inspectors/inspector.reel/inspector-confirmation.reel/inspector-confirmation.html
+++ b/ui/inspectors/inspector.reel/inspector-confirmation.reel/inspector-confirmation.html
@@ -66,7 +66,7 @@
     <div data-montage-id="owner" class="InspectorConfirmation">
         <div data-montage-id="confirmDeleteMessage" class="InspectorConfirmation-message"></div>
         <div data-montage-id="extraDeleteRepetition">
-            <div data-montage-id="extraDeleteItems"></div>
+            <div data-montage-id="extraDeleteItems" class="Checkbox--light"></div>
         </div>
         <div class="InspectorConfirmation-actions">
             <div data-montage-id="confirmDelete" class="Button--alert"></div>
