changes totalCount binding to steps

--- a/ui/sections/wizard/inspectors/wizard.reel/wizard.html
+++ b/ui/sections/wizard/inspectors/wizard.reel/wizard.html
@@ -83,7 +83,7 @@
                 "element": {"#": "totalPageNumber"}
             },
             "bindings": {
-                "value": {"<-": "@owner._services.length"}
+                "value": {"<-": "@owner._steps.length"}
             }
         }
     }
