Fix a bunch of issue with the new wizard component.

--- a/ui/sections/wizard/inspectors/wizard.reel/wizard.html
+++ b/ui/sections/wizard/inspectors/wizard.reel/wizard.html
@@ -52,7 +52,7 @@
             },
             "bindings": {
                 "classList.has('is-hidden')": {"<-": "@owner._currentIndex + 1 == @owner.steps.length"},
-                "disabled": {"<-": "@owner._context.isNextStepDisabled ?? false"}
+                "disabled": {"<-": "@owner._context.defined() ? !!@owner._context.isNextStepDisabled : false"}
             }
         },
 
