Fix surajy typo

--- a/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
+++ b/ui/inspectors/calendar-task.reel/rsync-args.reel/rsync-args.html
@@ -85,7 +85,7 @@
             "prototype": "blue-shark/ui/field-text-input.reel",
             "properties": {
                 "element": {"#": "remotePath"},
-                "label": "Remoate path (destination)"
+                "label": "Remote path (destination)"
             },
             "bindings": {
                 "value": {"<->": "@owner.args.0.remote_path"}
