ADDED: can delete

--- a/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
+++ b/ui/sections/system/inspectors/alert.reel/alert-filter.reel/alert-filter.html
@@ -23,7 +23,7 @@
                 "element": {"#": "inspector"},
                 "controller": {"@": "owner"},
                 "validationController": {"@": "validationController"},
-                "canDelete": false,
+                "canDelete": true,
                 "canSave": true,
                 "canRevert": true
             },
